# hidapi

./: CMakeLists.txt
hidapi/: hidapi.h
libusb/: hid.c
